:star2:Added form validation to AddForm (#172)+:hammer:Fixed toast border-radius on mobile (#174)

--- a/src/components/Home/AddModule.css
+++ b/src/components/Home/AddModule.css
@@ -71,12 +71,17 @@
   margin-bottom: 0.5rem;
 }
 
+/* Import Module */
+.import-module>div,
+.import-module>.accepted-files {
+  margin-bottom: .8rem;
+}
+
 .import-module .dropzone {
   width: 100%;
   max-width: 500px;
   height: 200px;
   padding: 0.6rem;
-  margin-bottom: 8px;
 
   display: grid;
   grid-template-rows: auto auto auto;
@@ -153,8 +158,7 @@
 
 .import-module .accepted-files {
   width: 100%;
-  /* background-color: red; */
-  margin-bottom: 10px;
+  list-style: none;
 }
 
 .import-module .accepted-files:empty {
@@ -169,10 +173,13 @@
   background-color: whitesmoke;
 
   line-height: 1;
-  margin-bottom: 5px;
 
   display: flex;
   align-items: center;
+}
+
+.import-module .accepted-files .file:not(:last-child) {
+  margin-bottom: 5px;
 }
 
 .import-module .accepted-files .file .file-icon {
@@ -181,7 +188,7 @@
   flex-shrink: 0;
 }
 
-.import-module .accepted-files .file .file-name {
+.import-module .accepted-files .file .file-info {
   font-size: 16px;
   word-break: break-all;
 }
@@ -198,12 +205,36 @@
   font-size: 1.4rem;
 }
 
+.import-module-warnings {
+  width: 100%;
+  border-radius: 5px;
+  background-color: rgba(241, 196, 15, .25);
+  border: 2px solid rgb(241, 196, 15);
+  padding: .6rem;
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  place-items: center left;
+  gap: .7rem;
+}
+
+.import-module-warning-icon {
+  color: rgb(241, 196, 15);
+  font-size: 2.2rem;
+}
+
+.import-create-module .import-module-btn.disabled {
+  background-color: var(--custom-border-color-light);
+  cursor: not-allowed;
+}
+
+/*----------------------------------------- Line --------------------------------- */
 .import-create-module .line {
   background-color: lightgray;
   width: 1px;
   height: 100%;
 }
 
+/* -------------------------------------- Create Module -------------------------- */
 .create-module {
   display: flex;
   flex-direction: column;
@@ -235,10 +266,48 @@
   outline-offset: -1px;
 }
 
+.create-module>div>input.is-invalid {
+  border-color: rgb(231, 76, 60);
+  background-color: rgba(231, 76, 60, .08);
+}
+
 .create-module #create-module-compatibility-input {
   background-color: whitesmoke;
 }
 
+.create-module-errors {
+  width: 100%;
+  border-radius: 5px;
+  background-color: rgba(231, 76, 60, .25);
+  border: 2px solid rgb(231, 76, 60);
+  padding: .6rem;
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  place-items: center left;
+  gap: .7rem;
+}
+
+.create-module-errors-icon {
+  font-size: 2.2rem;
+
+  color: rgb(231, 76, 60);
+}
+
+.create-module-errors-list,
+.import-module-warnings-list {
+  margin-left: 24px;
+}
+
+.create-module-errors-list li,
+.import-module-warnings-list li {
+  list-style-type: disc;
+  list-style-position: inside;
+
+  padding: 3px 0 3px 0px;
+  text-indent: -22px;
+}
+
+/* States */
 /* Active */
 .drop-browse-btn:active {
   background-color: rgb(61, 64, 82);
@@ -274,7 +343,7 @@
     background-color: rgb(61, 64, 82);
   }
 
-  .import-create-module .import-module-btn:hover,
+  .import-create-module .import-module-btn.enabled:hover,
   .import-create-module .create-module-btn:hover {
     background-color: var(--custom-prime-color-dark);
   }
@@ -282,16 +351,12 @@
   .import-module .accepted-files .file .file-remove-icon:hover {
     color: red;
   }
-
-  .create-module>div>input:hover:enabled {
-    border: 1px solid var(--custom-border-color-light);
-  }
 }
 
 @media screen and (max-width: 650px) {
   .import-create-module {
     grid-template-columns: none;
-    grid-template-rows: 1fr min-content 1fr;
+    grid-template-rows: min-content min-content min-content;
     column-gap: 0px;
     row-gap: 20px;
     padding: 15px 15px 0 15px;
@@ -311,5 +376,20 @@
 
   .import-module .dropzone {
     font-size: 18px;
+  }
+}
+
+/* Align list items for firefox */
+@media(min--moz-device-pixel-ratio:0) {
+
+  .create-module-errors-list,
+  .import-module-warnings-list {
+    margin-left: 0;
+  }
+
+  .create-module-errors-list li,
+  .import-module-warnings-list li {
+    padding: 3px 0 3px 10px;
+    text-indent: -15px;
   }
 }
