--- a/src/index.css
+++ b/src/index.css
@@ -300,9 +300,4 @@ Mobile CSS
   #root {
     min-height: 101vh;
   }
-
-  html,
-  body {
-    max-width: 100vw;
-  }
 }
